--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: ♥ Junie ♥
 description: Everything about Junie :)))
+timezone: Asia/Ho_Chi_Minh
+show_downloads: true
 theme: jekyll-theme-cayman
