--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ title: ♥ Junie ♥
 description: Everything about Junie :)))
 timezone: Asia/Ho_Chi_Minh
 show_downloads: true
+google_analytics:
 theme: jekyll-theme-cayman
