--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: ♥ Junie ♥
 description: Everything about Junie :)))
 author: junienee
+encoding: utf-8
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
