--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ author: junienee
 encoding: utf-8
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-minimal
+theme: jekyll-theme-tactile
