--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: ♥ Junie ♥
-description: Everything about Junie :)))
+title: ♥ junie ♥
+description: everything about junie :)))
 author: junienee
 encoding: utf-8
 show_downloads: false
