--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: junie
-description: everything about junie :)))
-author: junienee
+title: kwannnzz
+description: everything about kwannnzz :)))
+author: kwannnzz
 encoding: utf-8
 show_downloads: false
 google_analytics:
